# bookvoyage

./: LICENSE
bookvoyage-backend/: Cargo.toml
bookvoyage-backend/migrations/2023-01-20-104620_create_books/: down.sql  up.sql
bookvoyage-backend/src/: db_operations.rs  main.rs  model.rs  schema.rs
bookvoyage-frontend/: package-lock.json  package.json
bookvoyage-frontend/src/routes/: +layout.svelte  +page.svelte  Counter.svelte  Header.svelte
bookvoyage-frontend/src/routes/api/book_list/: +server.js
bookvoyage-frontend/src/routes/api/book_logs/: +server.js
bookvoyage-frontend/src/routes/api/code/: +server.js
bookvoyage-frontend/src/routes/api/send/: +server.js
bookvoyage-frontend/src/routes/find/: +page.svelte  FindBook.svelte
bookvoyage-frontend/src/routes/list/: +page.svelte  BookList.svelte
bookvoyage-frontend/src/routes/send/: +page.svelte  SendForm.svelte
