[package]
name = "bookvoyage-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version = "2.0.2", features=["postgres", "r2d2"]}
dotenv = "0.15.0"
#r2d2-diesel = "1.0.0"
#r2d2 = "0.8.9"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.58"
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.17"